--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Testing git</title>
 
-    <link rel="stylesheet" href="Assets/style.css" />
+    <link rel="stylesheet" href="Asssets\style.css" />
   </head>
   <body>
     <h1>Hello Git</h1>
