--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>Hello Git</h1>
     <h2>this is the testing website to test git.</h2>
 
-    <script src="Assets/script.js"></script>
+    <script src="Asssets\script.js"></script>
   </body>
 </html>
