--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Hello Git</h1>
-    <h2>this is the testing website to test git.</h2>
+    <h2 id="myHeading">this is the testing website to test git.</h2>
 
     <script src="Assets/script.js"></script>
   </body>
